--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,16 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 获取源码  🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Node环境版本 🗜️
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
       - name: 安装依赖 ⚙️
         run: npm install
       - name: 打包 🏗️
         run: |
-          npm run ghbuild
+          npm run build
           touch out/.nojekyll
       - name: 部署 🚀
         uses: JamesIves/github-pages-deploy-action@v4
