--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      - name: Install npm
+        run: npm install -g npm@10
       - name: 安装依赖 ⚙️
         run: npm install
       - name: 打包 🏗️
