--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      - name: Clear npm cache
+        run: npm cache clean --force
       - name: Install npm
         run: npm install -g npm@10
       - name: 安装依赖 ⚙️
