feat: update npm registry

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,6 +21,8 @@ jobs:
         run: npm install -g npm@7
       - name: 安装依赖 ⚙️
         run: npm install
+        env:
+          NPM_CONFIG_REGISTRY: https://registry.npm.taobao.org
       - name: 打包 🏗️
         run: |
           npm run build
